Metadata.json removed from gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,20 @@
-.*.sw?
-pkg
+/.idea
+/.gradle
+/.rvmrc
+/_site
+build
+pkg/
+coverage/
+Session.vim
 spec/fixtures
-.rspec_system
-metadata.json
-*.un~
+.*.sw[a-z]
 Gemfile.lock
+*.un~
+/.vagrant
+/vagrant/modules/public
+.coveralls.yml
+.bundle/
+.yardoc/
+doc/
+vendor/
+_site/
